load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "legend-pure-runtime-java-engine-interpreted",
    srcs = [
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/ClusteredValueSpecificationExecutor.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/ConsoleInterpreted.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/Core_Interpreted_PCTReportProvider.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/EqualityUtilities.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/ExecutionSupport.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/Executor.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/FunctionExecutionInterpreted.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/FunctionExpressionExecutor.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/InstanceValueExecutor.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/LambdaWithContext.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/NonExecutableValueSpecificationExecutor.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/OutputWriterInterpreted.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/RoutedValueSpecificationExecutor.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/VariableContext.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/VariableExpressionExecutor.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/extension/BaseInterpretedExtension.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/extension/InterpretedExtension.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/extension/InterpretedExtensionLoader.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/DefaultConstraintHandler.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/DeserializationUtils.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/InstantiationContext.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/MapCoreInstance.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/NativeFunction.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/NativePredicate.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/NumericUtilities.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/collection/anonymous/map/ConstructorForPairList.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/collection/anonymous/map/Get.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/collection/anonymous/map/GetIfAbsentPutWithKey.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/collection/anonymous/map/GetMapStats.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/collection/anonymous/map/GroupBy.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/collection/anonymous/map/KeyValues.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/collection/anonymous/map/Keys.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/collection/anonymous/map/Put.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/collection/anonymous/map/PutAllMaps.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/collection/anonymous/map/PutAllPairs.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/collection/anonymous/map/ReplaceAll.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/collection/anonymous/map/Values.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/collection/anonymous/tree/ReplaceTreeNode.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/collection/index/At.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/collection/index/IndexOf.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/collection/iteration/Find.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/collection/iteration/Fold.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/collection/operation/Add.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/collection/operation/Concatenate.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/collection/operation/RemoveAllOptimized.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/collection/operation/RemoveDuplicates.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/collection/operation/Zip.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/collection/order/Reverse.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/collection/order/Sort.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/collection/quantification/Exists.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/collection/quantification/ForAll.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/collection/slice/Drop.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/collection/slice/Init.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/collection/slice/Last.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/collection/slice/Slice.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/collection/slice/Tail.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/collection/slice/Take.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/date/creation/NewDate.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/date/extract/DatePart.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/date/extract/DayOfMonth.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/date/extract/Hour.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/date/extract/Minute.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/date/extract/MonthNumber.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/date/extract/NativeDateElementFunction.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/date/extract/Second.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/date/extract/Year.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/date/has/HasDay.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/date/has/HasHour.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/date/has/HasMinute.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/date/has/HasMonth.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/date/has/HasSecond.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/date/has/HasSubsecond.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/date/has/HasSubsecondWithAtLeastPrecision.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/date/has/NativeDateHasElementFunction.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/date/operation/AdjustDate.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/date/operation/DateDiff.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/io/Print.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/lang/cast/Cast.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/lang/cast/ToDecimal.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/lang/cast/ToFloat.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/lang/cast/ToMultiplicity.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/lang/creation/DynamicNew.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/lang/creation/DynamicNewGenericType.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/lang/eval/Evaluate.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/lang/eval/EvaluateAny.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/lang/eval/RawEvalProperty.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/lang/flow/If.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/lang/flow/Match.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/lang/unit/GetUnitValue.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/lang/unit/NewUnit.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/math/Random.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/math/exponential/Exp.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/math/exponential/Log.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/math/exponential/Log10.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/math/operation/Abs.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/math/operation/Mod.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/math/operation/Rem.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/math/operation/Sign.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/math/power/Cbrt.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/math/power/Power.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/math/power/Sqrt.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/math/round/AbstractRoundFunction.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/math/round/Ceiling.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/math/round/Floor.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/math/round/Round.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/math/round/RoundWithScale.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/math/trigonometry/ArcCosine.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/math/trigonometry/ArcSine.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/math/trigonometry/ArcTangent.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/math/trigonometry/ArcTangent2.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/math/trigonometry/CoTangent.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/math/trigonometry/Cosine.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/math/trigonometry/Sine.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/math/trigonometry/Tangent.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/meta/RemoveOverride.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/meta/graph/ElementPath.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/meta/graph/ElementToPath.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/meta/graph/PathToElement.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/meta/instance/Id.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/meta/profile/Stereotype.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/meta/profile/Tag.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/meta/reflect/CanReactivateDynamically.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/meta/reflect/Deactivate.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/meta/reflect/EvaluateAndDeactivate.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/meta/reflect/OpenVariableValues.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/meta/reflect/Reactivate.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/meta/source/SourceInformation.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/meta/type/Generalizations.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/meta/type/GenericType.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/meta/type/InstanceOf.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/meta/type/SubTypeOf.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/meta/type/_class/GenericTypeClass.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/meta/type/_enum/EnumName.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/meta/type/_enum/EnumValues.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/meta/type/relation/AddColumns.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/string/_boolean/Contains.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/string/_boolean/EndsWith.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/string/_boolean/StartsWith.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/string/index/IndexOfString.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/string/index/Length.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/string/operation/Replace.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/string/operation/ReverseString.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/string/operation/SubString.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/string/operation/ToLower.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/string/operation/ToUpper.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/string/parse/ParsePrimitive.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/string/parse/ParsePrimitiveBoolean.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/string/parse/ParsePrimitiveDate.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/string/parse/ParsePrimitiveDecimal.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/string/parse/ParsePrimitiveDecimalWithScalePrecision.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/string/parse/ParsePrimitiveFloat.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/string/parse/ParsePrimitiveInteger.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/string/split/Split.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/string/toString/Format.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/string/toString/ToString.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/string/trim/LTrim.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/string/trim/RTrim.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/string/trim/Trim.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/tests/Assert.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/essentials/tests/AssertError.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/grammar/_boolean/equality/Eq.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/grammar/_boolean/equality/Equal.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/grammar/_boolean/equality/Is.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/grammar/_boolean/inequality/LessThan.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/grammar/_boolean/inequality/LessThanOrEqualTo.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/grammar/_boolean/inequality/NumericComparisonPredicate.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/grammar/_boolean/operation/And.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/grammar/_boolean/operation/Not.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/grammar/_boolean/operation/Or.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/grammar/collection/iteration/Filter.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/grammar/collection/iteration/Map.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/grammar/collection/size/IsEmpty.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/grammar/collection/size/Size.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/grammar/collection/slice/First.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/grammar/lang/Compare.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/grammar/lang/Let.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/grammar/lang/_enum/ExtractEnumValue.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/grammar/lang/all/GetAll.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/grammar/lang/cast/CommonToMultiplicity.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/grammar/lang/cast/ToOne.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/grammar/lang/cast/ToOneMany.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/grammar/lang/creation/Copy.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/grammar/lang/creation/New.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/grammar/math/operation/Divide.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/grammar/math/operation/DivideDecimal.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/grammar/math/operation/Minus.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/grammar/math/operation/NumericAccumulator.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/grammar/math/operation/Plus.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/grammar/math/operation/Times.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/grammar/math/sequence/Range.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/natives/grammar/string/operation/JoinStrings.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/profiler/ActiveProfiler.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/profiler/IdentityHashingStrategy.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/profiler/Profiler.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/profiler/VoidProfiler.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/testHelper/CodeCoverageGenerator.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/testHelper/FunctionExecutionInterpretedWithCodeCoverage.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/testHelper/PCTReportGenerator.java",
        "src/main/java/org/finos/legend/pure/runtime/java/interpreted/testHelper/PureTestBuilderInterpreted.java",
    ],
    resources = glob(["src/main/resources/**/*"]),
    visibility = ["//visibility:public"],
    deps = [
        "//legend-pure/legend-pure-core/legend-pure-m3-core",
        "//legend-pure/legend-pure-core/legend-pure-m4",
        "//legend-pure/legend-pure-runtime/legend-pure-runtime-java-engine-shared",
        "@legend_maven//:junit_junit",
        "@legend_maven//:org_apache_commons_commons_lang3",
        "@legend_maven//:org_eclipse_collections_eclipse_collections",
        "@legend_maven//:org_eclipse_collections_eclipse_collections_api",
    ],
)

# java_test(
#     name = "tests",
#     srcs = glob(["src/test/java/**/*.java"]),
#     deps = [
#         ":legend-pure-runtime-java-engine-interpreted",
#         "//legend-pure/legend-pure-core/legend-pure-m3-core",
#         "//legend-pure/legend-pure-core/legend-pure-m3-core:m3-core-test-utils",
#         "@legend_maven//:org_eclipse_collections_eclipse_collections_testutils",
#     ],
# )
