load("@rules_java//java:defs.bzl", "java_library", "java_test")

java_library(
    name = "legend-pure-runtime-java-engine-shared",
    srcs = [
        "src/main/java/org/finos/legend/pure/runtime/java/shared/canstreamstate/CanStreamState.java",
        "src/main/java/org/finos/legend/pure/runtime/java/shared/hash/HashType.java",
        "src/main/java/org/finos/legend/pure/runtime/java/shared/hash/HashingUtil.java",
        "src/main/java/org/finos/legend/pure/runtime/java/shared/http/HttpMethod.java",
        "src/main/java/org/finos/legend/pure/runtime/java/shared/http/HttpRawHelper.java",
        "src/main/java/org/finos/legend/pure/runtime/java/shared/http/SimpleHttpResponse.java",
        "src/main/java/org/finos/legend/pure/runtime/java/shared/http/URLScheme.java",
        "src/main/java/org/finos/legend/pure/runtime/java/shared/identity/IdentityManager.java",
        "src/main/java/org/finos/legend/pure/runtime/java/shared/listeners/ExecutionEndListener.java",
        "src/main/java/org/finos/legend/pure/runtime/java/shared/listeners/ExecutionEndListenerState.java",
        "src/main/java/org/finos/legend/pure/runtime/java/shared/listeners/ExecutionEndListenerStateException.java",
        "src/main/java/org/finos/legend/pure/runtime/java/shared/listeners/ExecutionListeners.java",
        "src/main/java/org/finos/legend/pure/runtime/java/shared/listeners/IdentifableExecutionEndListner.java",
        "src/main/java/org/finos/legend/pure/runtime/java/shared/listeners/IdentifiableExecutionEndListener.java",
        "src/main/java/org/finos/legend/pure/runtime/java/shared/map/PureMapStats.java",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//legend-pure/legend-pure-core/legend-pure-m3-core",
        "//legend-pure/legend-pure-core/legend-pure-m4",
        "@legend_maven//:commons_codec_commons_codec",
        "@legend_maven//:org_apache_httpcomponents_httpclient",
        "@legend_maven//:org_apache_httpcomponents_httpcore",
        "@legend_maven//:org_eclipse_collections_eclipse_collections",
        "@legend_maven//:org_eclipse_collections_eclipse_collections_api",
    ],
)

java_test(
    name = "HashingUtilTest",
    srcs = ["src/test/java/org/finos/legend/pure/runtime/java/shared/hash/HashingUtilTest.java"],
    deps = [
        ":legend-pure-runtime-java-engine-shared",
        "@legend_maven//:junit_junit",
    ],
)
