load("@rules_java//java:defs.bzl", "java_library")

genrule(
    name = "antlr_gen",
    srcs = glob(["src/main/antlr4/**/*.g4"]) + [
        "//legend-pure/legend-pure-core/legend-pure-m4:grammar_files",
    ],
    outs = [
        "org/finos/legend/pure/m2/dsl/diagram/serialization/grammar/DiagramAntlrLexer.java",
        "org/finos/legend/pure/m2/dsl/diagram/serialization/grammar/DiagramAntlrLexer.tokens",
        "org/finos/legend/pure/m2/dsl/diagram/serialization/grammar/DiagramAntlrParser.java",
        "org/finos/legend/pure/m2/dsl/diagram/serialization/grammar/DiagramAntlrParserVisitor.java",
        "org/finos/legend/pure/m2/dsl/diagram/serialization/grammar/DiagramAntlrParserListener.java",
        "org/finos/legend/pure/m2/dsl/diagram/serialization/grammar/DiagramAntlrParserBaseVisitor.java",
        "org/finos/legend/pure/m2/dsl/diagram/serialization/grammar/DiagramAntlrParserBaseListener.java",
    ],
    cmd = """
        set -e
        mkdir -p antlr_flat
        
        # Copy all sources to antlr_flat
        for f in $(SRCS); do
            cp "$$f" antlr_flat/
        done
        
        # 1. Lexer
        $(location //legend-pure:antlr4_tool) \
        -package org.finos.legend.pure.m2.dsl.diagram.serialization.grammar \
        -visitor -listener \
        -lib antlr_flat \
        -o $(RULEDIR)/org/finos/legend/pure/m2/dsl/diagram/serialization/grammar \
        antlr_flat/DiagramAntlrLexer.g4

        # Move outputs up if they were created in a subdirectory (Antlr behavior varies)
        # Check if antlr_flat subdir exists in output
        if [ -d "$(RULEDIR)/org/finos/legend/pure/m2/dsl/diagram/serialization/grammar/antlr_flat" ]; then
            mv $(RULEDIR)/org/finos/legend/pure/m2/dsl/diagram/serialization/grammar/antlr_flat/* $(RULEDIR)/org/finos/legend/pure/m2/dsl/diagram/serialization/grammar/
            rmdir $(RULEDIR)/org/finos/legend/pure/m2/dsl/diagram/serialization/grammar/antlr_flat
        fi
        
        # Copy tokens to flat
        cp $(RULEDIR)/org/finos/legend/pure/m2/dsl/diagram/serialization/grammar/DiagramAntlrLexer.tokens antlr_flat/
        
        # 2. Parser
        $(location //legend-pure:antlr4_tool) \
        -package org.finos.legend.pure.m2.dsl.diagram.serialization.grammar \
        -visitor -listener \
        -lib antlr_flat \
        -o $(RULEDIR)/org/finos/legend/pure/m2/dsl/diagram/serialization/grammar \
        antlr_flat/DiagramAntlrParser.g4
        
        # Move outputs up
        if [ -d "$(RULEDIR)/org/finos/legend/pure/m2/dsl/diagram/serialization/grammar/antlr_flat" ]; then
            mv $(RULEDIR)/org/finos/legend/pure/m2/dsl/diagram/serialization/grammar/antlr_flat/* $(RULEDIR)/org/finos/legend/pure/m2/dsl/diagram/serialization/grammar/
            rmdir $(RULEDIR)/org/finos/legend/pure/m2/dsl/diagram/serialization/grammar/antlr_flat
        fi
    """,
    tools = ["//legend-pure:antlr4_tool"],
)

java_library(
    name = "legend-pure-m2-dsl-diagram-grammar",
    srcs = glob(["src/main/java/**/*.java"]) + [
        ":antlr_gen",
    ],
    resources = glob(["src/main/resources/**/*"]),
    visibility = ["//visibility:public"],
    deps = [
        "//legend-pure/legend-pure-core/legend-pure-m4",
        "//legend-pure/legend-pure-core/legend-pure-m3-core",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-diagram/legend-pure-m2-dsl-diagram-pure",
        "@maven//:org_antlr_antlr4_runtime",
        "@maven//:org_eclipse_collections_eclipse_collections",
        "@maven//:org_eclipse_collections_eclipse_collections_api",
    ],
)
