load("@rules_java//java:defs.bzl", "java_library")
load("//legend-pure:grammar.bzl", "antlr_gen")

antlr_gen(
    name = "antlr_gen",
    srcs = glob(["src/main/antlr4/**/*.g4"]) + [
        "//legend-pure/legend-pure-core/legend-pure-m4:grammar_files",
    ],
    tool = "//legend-pure:antlr4_tool",
)

java_library(
    name = "legend-pure-m2-dsl-diagram-grammar",
    srcs = [
        "src/main/java/org/finos/legend/pure/m2/dsl/diagram/M2DiagramPaths.java",
        "src/main/java/org/finos/legend/pure/m2/dsl/diagram/serialization/grammar/DiagramParser.java",
        "src/main/java/org/finos/legend/pure/m2/dsl/diagram/serialization/grammar/antlr/DiagramStoreGraphBuilder.java",
        "src/main/java/org/finos/legend/pure/m2/dsl/diagram/serialization/grammar/processor/DiagramProcessor.java",
        "src/main/java/org/finos/legend/pure/m2/dsl/diagram/serialization/grammar/unloader/AssociationViewUnloaderWalk.java",
        "src/main/java/org/finos/legend/pure/m2/dsl/diagram/serialization/grammar/unloader/DiagramUnbind.java",
        "src/main/java/org/finos/legend/pure/m2/dsl/diagram/serialization/grammar/validation/DiagramValidator.java",
        "src/main/java/org/finos/legend/pure/m2/dsl/diagram/serialization/grammar/walker/DiagramUnloaderWalk.java",
        "src/main/java/org/finos/legend/pure/m2/dsl/diagram/serialization/grammar/walker/GeneralizationViewUnloaderWalk.java",
        "src/main/java/org/finos/legend/pure/m2/dsl/diagram/serialization/grammar/walker/PropertyViewUnloaderWalk.java",
        "src/main/java/org/finos/legend/pure/m2/dsl/diagram/serialization/grammar/walker/TypeViewUnloaderWalk.java",
    ] + [
        ":antlr_gen",
    ],
    resources = glob(["src/main/resources/**/*"]),
    visibility = ["//visibility:public"],
    deps = [
        "//legend-pure/legend-pure-core/legend-pure-m3-core",
        "//legend-pure/legend-pure-core/legend-pure-m4",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-diagram/legend-pure-m2-dsl-diagram-pure",
        "@legend_maven//:org_antlr_antlr4_runtime",
        "@legend_maven//:org_eclipse_collections_eclipse_collections",
        "@legend_maven//:org_eclipse_collections_eclipse_collections_api",
    ],
)
