load("//tools/build_rules:legend_java_library.bzl", "legend_java_library")

legend_java_library(
    name = "legend-pure-runtime-java-extension-compiled-dsl-diagram",
    src_root = "legend-pure/legend-pure-dsl/legend-pure-dsl-diagram/legend-pure-runtime-java-extension-compiled-dsl-diagram/src/main/java",
    srcs = glob(["src/main/java/**/*.java"]),
    model_name = "Diagram",
    model_factory_class = "org.finos.legend.pure.m2.dsl.diagram.serialization.grammar.DiagramParser",
    model_srcs = ["//legend-pure/legend-pure-dsl/legend-pure-dsl-diagram/legend-pure-m2-dsl-diagram-pure:pure_gen"],
    javacopts = [
        "-Xep:IdentityBinaryExpression:OFF",
        "-Xep:IsInstanceIncompatibleType:OFF",
    ],
    resources = glob(["src/main/resources/**/*"]),
    visibility = ["//visibility:public"],
    deps = [
        "//legend-pure/legend-pure-core/legend-pure-m3-core",
        "//legend-pure/legend-pure-core/legend-pure-m4",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-diagram/legend-pure-m2-dsl-diagram-pure",
        "//legend-pure/legend-pure-runtime/legend-pure-runtime-java-engine-compiled",
        "@legend_maven//:org_eclipse_collections_eclipse_collections",
        "@legend_maven//:org_eclipse_collections_eclipse_collections_api",
    ],
)
