load("//tools/build_rules:legend_java_library.bzl", "legend_java_library")

java_binary(
    name = "JavaCodeGeneration_Diagram",
    main_class = "org.finos.legend.pure.runtime.java.compiled.generation.orchestrator.JavaCodeGeneration",
    visibility = ["//visibility:private"],
    runtime_deps = [
        "//legend-pure/legend-pure-core/legend-pure-m3-core",
        "//legend-pure/legend-pure-core/legend-pure-m4",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-diagram/legend-pure-m2-dsl-diagram-pure",
        "//legend-pure/legend-pure-runtime/legend-pure-runtime-java-engine-compiled",
        "@legend_maven//:org_eclipse_collections_eclipse_collections",
        "@legend_maven//:org_eclipse_collections_eclipse_collections_api",
    ],
)

legend_java_library(
    name = "legend-pure-runtime-java-extension-compiled-dsl-diagram",
    src_root = "legend-pure/legend-pure-dsl/legend-pure-dsl-diagram/legend-pure-runtime-java-extension-compiled-dsl-diagram/src/main/java",
    srcs = ["src/main/java/org/finos/legend/pure/runtime/java/extension/dsl/diagram/compiled/DiagramExtensionCompiled.java"],
    model_name = "Diagram",
    model_factory_class = "org.finos.legend.pure.m2.dsl.diagram.serialization.grammar.DiagramParser",
    model_srcs = ["//legend-pure/legend-pure-dsl/legend-pure-dsl-diagram/legend-pure-m2-dsl-diagram-pure:pure_gen"],
    pure_srcs = ["//legend-pure/legend-pure-dsl/legend-pure-dsl-diagram/legend-pure-m2-dsl-diagram-pure:pure_platform_dsl_diagram_par_lib"],
    pure_repository = "platform_dsl_diagram",
    pure_generator = ":JavaCodeGeneration_Diagram",
    include_metadata = True,


    javacopts = [
        "-Xep:IdentityBinaryExpression:OFF",
        "-Xep:ComparableType:OFF",
        "-Xep:IsInstanceIncompatibleType:OFF",
    ],
    resources = glob(["src/main/resources/**/*"]),
    visibility = ["//visibility:public"],
    deps = [
        "//legend-pure/legend-pure-core/legend-pure-m3-core",
        "//legend-pure/legend-pure-core/legend-pure-m4",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-diagram/legend-pure-m2-dsl-diagram-pure",
        "//legend-pure/legend-pure-runtime/legend-pure-runtime-java-engine-compiled",
        "@legend_maven//:org_eclipse_collections_eclipse_collections",
        "@legend_maven//:org_eclipse_collections_eclipse_collections_api",
    ],
)
